--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="header-container">
         <h1>☎️ KDH-REHBER YÖNETİM SİSTEMİ</h1>
         <h3>DİNAMİK REHBER GÜNCELLEME FORMU</h3>
-        <h6>BİLGİ SİSTEMLERİ DONANIM EKİBİ</h6>
+        <h6>BİLGİ İŞLEM DONANIM EKİBİ</h6>
     </div>
 
     <form id="myForm" action="https://script.google.com/macros/s/AKfycbyj-o7IOIvX_4vhqzM37jhHIswmW3p9emEW7EjBDJ1eEJqoCIH7UgH0Qz7VaJIQI2m26A/exec" method="POST">
@@ -229,7 +229,7 @@
     </form>
     
     <footer class="footer">
-        © 2025 KDH Rehber Çalışması. Tüm Hakları Saklıdır. | **BİLGİ SİSTEMLERİ DONANIM BİRİMİ**
+        © 2025 KDH Rehber Çalışması. Tüm Hakları Saklıdır. | **BİLGİ İŞLEM DONANIM BİRİMİ**
     </footer>
 
     <script>
